--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "agendafinanceira",
+  "name": "testeteste",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -17,7 +16,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "prettier": "3.1.0"
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.6",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
