--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
