--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.3",
     "@react-native-community/viewpager": "^5.0.11",
