--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-community/viewpager": "^5.0.11",
-    "@react-native-picker/picker": "^2.5.1",
+    "@react-native-google-signin/google-signin": "^10.1.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -25,15 +26,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-country-picker-modal": "^2.0.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-picker-select": "^9.0.0",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-google-app-auth": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
