--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
@@ -21,6 +22,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,13 +36,12 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6",
-    "expo-google-app-auth": "~8.3.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "^0.72.6",
+    "@types/react-native": "^0.72.7",
     "typescript": "^5.1.3"
   },
   "private": true
